sonari errori parandused